--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(person(c("Sean", "Kenneth"), "Maden", role = c("cre", "aut"),
 Description: Access and analyze data from the recount methylation database.
 License: Artistic-2.0
 Encoding: UTF-8
-LazyData: true
+LazyData: FALSE
 Imports:
   minfi,
   rhdf5,
