--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: recountmethylation
+Package: recount-methylation
 Version: 0.01.0
-Title: Access and analyze the recount methylation database
+Title: Access and analyze the Recount Methylation database
 Authors@R: c(person(c("Sean", "Kenneth"), "Maden", role = c("cre", "aut"),
                     email = "maden@ohsu.edu", comment = c(ORCID = "0000-0002-2212-4894")),
              person("Abhi", "Nellore", role = "aut", email = "nellore@ohsu.edu"),
@@ -8,8 +8,8 @@ Authors@R: c(person(c("Sean", "Kenneth"), "Maden", role = c("cre", "aut"),
 Description: Access and analyze data from the recount methylation database.
 License: Artistic-2.0
 Encoding: UTF-8
-URL: https://github.com/metamaden/recountmethylation
-BugReports: https://github.com/metamaden/recountmethylation/issues
+URL: https://github.com/metamaden/recount-methylation
+BugReports: https://github.com/metamaden/recount-methylation/issues
 LazyData: FALSE
 Imports:
   minfi,
