adds news.rd, revises vignette, adds fun examples
Former-commit-id: ed624036852125787aac53e3fb9719a7a1036903

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Imports:
   rhdf5,
   S4Vectors
 Suggests:
-  Rcpp,
+  RCurl,
   knitr
 VignetteBuilder: knitr
 biocViews: DNAMethylation, Epigenetics, Microarray, MethylationArray
