--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,12 +15,12 @@ Imports:
     minfi,
     rhdf5,
     S4Vectors,
-    RCurl
+    RCurl,
+    IlluminaHumanMethylation450kmanifest
 Suggests:
     knitr,
     testthat,
-    IlluminaHumanMethylation450kanno.ilmn12.hg19,
-    IlluminaHumanMethylation450kmanifest
+    IlluminaHumanMethylation450kanno.ilmn12.hg19
 VignetteBuilder: knitr
 biocViews: DNAMethylation, Epigenetics, Microarray, MethylationArray, GEO, GDS, CSA
 RoxygenNote: 7.1.0
