--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,12 @@
 Package: recountmethylation
 Version: 0.1
 Title: Access and analyze the Recount Methylation database
-Author: "Sean K Maden"
-Maintainer: "Sean K Maden"
-Description: Access and analyze data from the recount methylation database.
+Authors@R: c(person(c("Sean", "K"), "Maden", role = c("cre", "aut"),
+                    email = "maden@ohsu.edu"),
+                    person(c("Kasper", "D"), "Hansen"),
+                    person(c("Abhi"), "Nellore")
+                    )
+Description: Access and analyze DNAm assay data and GSM metadata from GEO/GDS.
 License: Artistic-2.0
 Encoding: UTF-8
 URL: https://github.com/metamaden/recountmethylation
