--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ URL: https://github.com/metamaden/recountmethylation
 BugReports: https://github.com/metamaden/recountmethylation/issues
 LazyData: TRUE
 Imports:
+    utils,
     minfi,
     rhdf5,
     S4Vectors,
