--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ BugReports: https://github.com/metamaden/recountmethylation/issues
 LazyData: TRUE
 Imports:
     utils,
+    S4Vectors,
     minfi,
     rhdf5,
     S4Vectors,
